--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-<div><%= @user.email %></div>
+<% provide(:title, "My Entities") %>
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="panel-title">My Entities</div>
