--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Register") %>
 <div class="content-small">
   <div class="panel panel-default">
     <div class="panel-heading">
