--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,15 +9,15 @@
       </ul>
     </div>
   <% end %>
-  <div class="form-group">
+  <div class="field form-group">
     <%= f.label(:email, "Email") %>
     <%= f.text_field :email, class: "form-control", placeholder: "user@example.com", autofocus: true %>
   </div>
-  <div class="form-group">
+  <div class="field form-group">
     <%= f.label(:password, "Password:") %>
     <%= f.password_field :password, class: "form-control", placeholder: "Can contain any letters, number, and punctuation." %>
   </div>
-  <div class="form-group">
+  <div class="field form-group">
     <%= f.label(:password_confirmation, "Password Confirmation:") %>
     <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm password." %>
   </div>
