Entities completed minus validations

--- a/app/views/entities/edit.html.erb
+++ b/app/views/entities/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Entity</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @entity %> |
-<%= link_to 'Back', entities_path %>
+<% provide(:title, "Edit Entity") %>
+<div class="content-small">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <div class="panel-title">
+        Edit Entity
+      </div>
+    </div>
+    <div class="panel-body">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
