--- a/app/views/entities/show.html.erb
+++ b/app/views/entities/show.html.erb
@@ -1,9 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @entity.name %>
-</p>
-
-<%= link_to 'Edit', edit_entity_path(@entity) %> |
-<%= link_to 'Back', entities_path %>
+<%= render @entity %>
