--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,19 @@ body {
    width: 100%;
   }
 
+  #error_explanation {
+    @extend .alert;
+    @extend .alert-danger;
+
+    h2 {
+      font-size: 20px;
+    }
+  }
+
+  .field_with_errors {
+    @extend .has-error;
+  }
+
   #navigation {
     height: 50px;
   }
