--- a/app/views/entity_tokens/_form.html.erb
+++ b/app/views/entity_tokens/_form.html.erb
@@ -2,16 +2,20 @@
   <% if @entity_token.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@entity_token.errors.count, "error") %> prohibited this entity_token from being saved:</h2>
-
       <ul>
-      <% @entity_token.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @entity_token.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
+  <%= f.hidden_field :entity_id, value: @entity.id %>
+  <%= f.hidden_field :user_id, value: @user.id %>
+  <div class="field form-group">
+    <%= f.label :key %>
+    <%= f.collection_select :key, @user.keys, :id, :name, {}, {class: "form-control"} %>
+  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Entity Token", class: "btn btn-success" %>
   </div>
 <% end %>
