--- a/app/views/keys/_form.html.erb
+++ b/app/views/keys/_form.html.erb
@@ -2,20 +2,23 @@
   <% if @key.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@key.errors.count, "error") %> prohibited this key from being saved:</h2>
-
       <ul>
-      <% @key.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @key.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_field :body %>
+  <%= f.hidden_field :user_id, value: @user.id %>
+  <div class="field form-group">
+    <%= f.label :name, "Key Name"  %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+  <div class="field form-group">
+    <%= f.label :body %>
+    <%= f.text_area :body, class: "form-control"%>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-success" %>
   </div>
 <% end %>
