--- a/app/views/keys/edit.html.erb
+++ b/app/views/keys/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Key</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @key %> |
-<%= link_to 'Back', keys_path %>
+<% provide(:title, "Edit Key") %>
+<div class="content-small">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <div class="panel-title">
+        Edit Key
+      </div>
+    </div>
+    <div class="panel-body">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
