--- a/app/views/keys/show.html.erb
+++ b/app/views/keys/show.html.erb
@@ -1,9 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @key.body %>
-</p>
-
-<%= link_to 'Edit', edit_key_path(@key) %> |
-<%= link_to 'Back', keys_path %>
+<%= render @key %>
