--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,19 +4,40 @@
     <div class="panel-title">My Entities</div>
   </div>
   <div class="panel-body">
-    <table class="table table-default table-striped table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Domain</th>
-          <th>Port</th>
-        </tr>
-      </thead>
-    <% @user.entities.each do |e| %>
-      <%= render e %>
-    <% end %>
-    </table>
+    <div class="row">
+      <div class="col-md-9">
+        <table class="table table-default table-striped table-hover">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Domain</th>
+              <th>Port</th>
+              <th>Token Key</th>
+              <th>Token Actions</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <% @user.entities.each do |e| %>
+          <%= render e %>
+          <% end %>
+        </table>
+        <%= link_to "Add Entity", new_entity_path, class: "btn btn-success" %>
+      </div>
+      <div class="col-md-3">
+        <table class="table table-default table-striped table-hover">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <% @user.keys.each do |k| %>
+            <%= render k %>
+          <% end %>
+        </table>
+        <%= link_to "Add Key", new_key_path, class: "btn btn-success" %>
+      </div>
+    </div>
   </div>
 </div>
 <%= link_to "Edit User", edit_user_path(@user), class: "btn btn-primary" %>
-<%= link_to "Add Entity", new_entity_path, class: "btn btn-success" %>
