--- a/app/views/entity_tokens/edit.html.erb
+++ b/app/views/entity_tokens/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Entity Token</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @entity_token %> |
-<%= link_to 'Back', entity_tokens_path %>
+<% provide(:title, "Edit Entity Token") %>
+<div class="content-small">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <div class="panel-title">
+        Edit Entity Token
+      </div>
+    </div>
+    <div class="panel-body">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
