application: force https when running on heroku
Signed-off-by: nuclearmistake <nuclearmistake@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title><%= content_for?(:title) ? yield(:title) : "EIES" %></title>
+    <script>
+      // force https if running on heroku and accessed with http
+      if (~document.location.search('http://eies.herokuapp.com'))
+        document.location.href = document.location.href.replace('http://','https://');
+    </script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
