force https on heroku: while [ 1 ]; do derp; done
Signed-off-by: nuclearmistake <nuclearmistake@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "EIES" %></title>
     <script>
       // force https if running on heroku and accessed with http
-      if (~document.location.search('http://eies.herokuapp.com'))
+      if (~document.location.href.search('http://eies.herokuapp.com'))
         document.location.href = document.location.href.replace('http://','https://');
     </script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
